--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -11,7 +11,8 @@
 <body>
 
 @@include('../components/heder.html')
-<div class="ocnova">
+<div class="main-content">
+    <div class="ocnova">
     <div class="Collection">
         <div class="textcollection">
             <div class="New">New Arrival</div>
@@ -150,7 +151,11 @@
     </div>
 
 </div>
-@@include('../components/footer.html')
+</div>
+<div class="FOOTERDR">
+    @@include('../components/footer.html')
+</div>
+
 
 
 </body>
