--- a/src/pages/stranicka4.html
+++ b/src/pages/stranicka4.html
@@ -10,7 +10,8 @@
 </head>
 <body>
 @@include('../components/heder.html')
-@@include('../components/nachalo2.html', {
+<div class="main-content">
+    @@include('../components/nachalo2.html', {
 "title": "Product Comparison",
 "text": "<a href='./stranicka3.html'>Comparison</a>",
 "img": "./assets/images/logo.webp"  // Путь к изображению
@@ -234,6 +235,7 @@
         "text": "Dedicated support"
         })
     </div>
+</div>
     @@include('../components/footer.html')
 
 </body>
