--- a/src/pages/stranicka3.html
+++ b/src/pages/stranicka3.html
@@ -164,7 +164,8 @@
         })
     </div>
     <button class="knp2">Show More</button>
-@@include('../components/footer.html')
+<div class="gooterstranicka3">@@include('../components/footer.html')</div>
+
 
 
 </body>
