--- a/src/pages/stranicka4.html
+++ b/src/pages/stranicka4.html
@@ -208,8 +208,16 @@
         </tr>
         <tr>
             <td></td>
-            <td><button class="kntable">Add To Cart</button></td>
-            <td><button class="kntable">Add To Cart</button></td>
+            <td>
+                <a href="./stranicka5.html">
+                    <button class="kntable">Add To Cart</button>
+                </a>
+            </td>
+            <td>
+                <a href="./stranicka5.html">
+                    <button class="kntable">Add To Cart</button>
+                </a>
+            </td>
         </tr>
         </tbody>
     </table>
