--- a/src/pages/strenicka2.html
+++ b/src/pages/strenicka2.html
@@ -12,7 +12,7 @@
 @@include('../components/heder.html')
 @@include('../components/nachalo2.html', {
 "title": "Shop",
-"text": "<a href='./stranicka3.html'>Shop</a>"
+"text": "Shop"
 })
 <div class="bloc2">
     <div class="str2display">
